event text spacing fix

--- a/src/styles/components/artistEvent.less
+++ b/src/styles/components/artistEvent.less
@@ -17,7 +17,7 @@
 
     .event-item {
         @media screen and (max-width: 650px) {
-            margin: 5 0 5 0;
+            margin: 5px 0 5px 0;
         }
     }    
 }
